# Project-3

./: .gitignore  PubChem_API.ipynb  PubChem_input1.xlsx  PubChem_input2.xlsx  PubChem_output1.xlsx  PubChem_output2.xlsx  README.md  README.txt  lookup_cli.py  pyproject.toml
.github/workflows/: tests.yml
pkg/: __init__.py  lookup.py  openalex.py
pubchem_lookup/: __init__.py  cli.py  fetch.py  lookup.py
tests/: test_cli.py  test_fetch.py  test_lookup.py
