[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pubchem-lookup"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pubchempy",
    "pandas",
    "requests",
    "openpyxl",
]

[project.scripts]
pubchem-lookup = "pubchem_lookup.cli:main"
